--- a/Dan demo/index.html
+++ b/Dan demo/index.html
@@ -4,50 +4,52 @@
 <head>
     <title></title>
     <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, width=device-width">
     <link href="kendo/styles/kendo.mobile.all.min.css" rel="stylesheet">
+
+    <link href="styles/overrides.css" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet">
 
     <script src="cordova.js"></script>
     <script src="kendo/js/jquery.min.js"></script>
     <script src="kendo/js/kendo.mobile.min.js"></script>
     <script src="app.js"></script>
-	<script src="scripts/eventhandlers.js"></script>
 </head>
 
 <body id="kendoUiMobileApp">
-    <div data-role="layout" data-id="layoutMain">
+    <script src="components/home/index.js"></script>
+    <div data-role="layout" data-id="main">
         <header data-role="header">
             <div data-role="navbar">
                 <span data-role="view-title"></span>
             </div>
         </header>
-
-        <!-- application views will be rendered here -->
-
         <footer data-role="footer">
             <div data-role="tabstrip" id="navigation-container">
-                <a href="views/viewFirst.html" data-icon="home">First View</a>
-				<a href="views/viewSecond.html" data-icon="organize">Second View</a>
-				<a href="views/viewThird.html" data-icon="featured">Third View</a>
+                <a href="components/home/view.html" data-icon="home"><span class="navigation-link-text" data-bind="text: strings.home.title"></span></a>
             </div>
         </footer>
     </div>
-	
-	<div data-role="layout" data-id="layoutSub">
+
+    <div data-role="layout" data-id="main-nonav">
         <header data-role="header">
-            
-        </header>
-
-        <!-- application views will be rendered here -->
-
-        <footer data-role="footer">
-            <div data-role="tabstrip" id="navigation-container">
-                <a href="views/viewFirst.html" data-icon="home">First View</a>
-				<a href="views/viewSecond.html" data-icon="organize">Second View</a>
-				<a href="views/viewThird.html" data-icon="featured">Third View</a>
+            <div data-role="navbar">
+                <span data-role="view-title"></span>
             </div>
+        </header>
+        <footer data-role="footer">
         </footer>
     </div>
+    <div id="notify" class="notify-pop-up">
+        <span class="notify-pop-up__content"></span>
+    </div>
+    <!--  start index html save -->
+    <!--  end index html save -->
+
+    <!-- START_CUSTOM_CODE_kendoUiMobileApp -->
+    <!-- Add custom code here. For more information about custom code, see http://docs.telerik.com/platform/screenbuilder/troubleshooting/how-to-keep-custom-code-changes -->
+
+    <!-- END_CUSTOM_CODE_kendoUiMobileApp -->
 </body>
 
 </html>
